--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,10 @@
 
 # Visual Studio cache directory
 .vs/
+.vscode/
+
+# PlasticSCM working directory
+.plastic/
 
 # Gradle cache directory
 .gradle/
